Task#45 Invitation poll based games Added negative scenarios for poll processing Reply to message functionality added for scenario messages Stop poll functionality tested Updated randoms so approved files are same when it's executed as single test or in batch Removed redundant files and dependencies Removed integration tests submodule